fix: #404: fix styles for fullscreen on desktop to fix overflow bug on macOs

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -61,6 +61,10 @@ body {
   body {
     overflow: hidden;
     -webkit-overflow-scrolling: touch;
+
+    @include media.desktop {
+      overflow: auto;
+    }
   }
 }
 
